# rinha-de-backend-2024-q1-code

./: .gitignore  README.md  docker-compose.yml  nginx.conf  script.sql
RinhaDeBackend2024.Api/: RinhaDeBackend2024.Api.sln  dockerfile
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/: Program.cs  RinhaDeBackend2024.Api.csproj  RinhaDeBackend2024.Api.http
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/Background/: TrasactionBackgroundService.cs
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/Contracts/Entities/: Customer.cs
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/Contracts/Requests/: TransactionRequest.cs
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/Contracts/Responses/: BalanceResponse.cs  CustomerResponse.cs  ExtractResponse.cs  TransactionResponse.cs
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/DataAccess/: DatabaseAccess.cs  DatabaseCommunicationObject.cs  SqlDataAccess.cs
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/DataAccess/Dtos/: DatabaseCreditAndDebtDto.cs  (+1 more)
RinhaDeBackend2024.Api/RinhaDeBackend2024.Api/Properties/: launchSettings.json
RinhaDeBackend2024.Api/RyansDB/: main.cpp
RinhaDeBackend2024.Api/RyansDB/Connections/: connection.cpp  connection.hpp
RinhaDeBackend2024.Api/RyansDB/Socket/: socket.hpp
RyansDB/: CMakeLists.txt  dockerfile  main.cpp
RyansDB/Commands/: commands.hpp
RyansDB/Connections/: connection.cpp  connection.hpp
RyansDB/Data/: customer_data.cpp  customer_data.hpp  transaction_data.cpp  transaction_data.hpp
RyansDB/Data/Access/: data_access.cpp  data_access.hpp
RyansDB/Data/Customer/: customer_data.pb.cc  customer_data.pb.h  customer_data.proto
RyansDB/Data/Repositories/: customer_repository.cpp  customer_repository.hpp  file_manager_helper.hpp  transaction_repository.cpp  transaction_repository.hpp
RyansDB/Data/Transaction/: transaction_data.pb.cc  transaction_data.pb.h  transaction_data.proto
RyansDB/Dto/Customer/: customer_dto.pb.cc  customer_dto.pb.h  customer_dto.proto
RyansDB/Dto/Transaction/: transaction_dto.pb.cc  transaction_dto.pb.h  transaction_dto.proto
RyansDB/FileManager/: file_manager.hpp
RyansDB/Results/: resutls.hpp
RyansDB/Socket/: socket.cpp  socket.hpp
